# apps/backend/src/auth/auth.controller.ts
@@ -1,15 +1,6 @@
-import {
-  Controller,
-  Post,
-  Body,
-  HttpCode,
-  HttpStatus,
-  Get,
-} from '@nestjs/common';
+import { Controller, Post, Body, HttpCode, HttpStatus } from '@nestjs/common';
 import { AuthService } from './auth.service';
 import { LoginDto } from './dto/login.dto';
-import { CurrentUser } from './decorators/current-user.decorator';
-import { RequireAuthentication } from './decorators/require-authentication.decorator';
 
 @Controller('auth')
 export class AuthController {
@@ -19,11 +10,5 @@ export class AuthController {
   @HttpCode(HttpStatus.OK)
   async login(@Body() loginDto: LoginDto) {
     return this.authService.login(loginDto.username, loginDto.password);
-  }
-
-  @Get('me')
-  @RequireAuthentication()
-  getCurrentUser(@CurrentUser() user: any) {
-    return user;
   }
 }
